--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,40 @@
-APP_NAME=Laravel
+APP_NAME=Tasks
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:IqIlVRKZOoarZqtP85uzpTb1SZRAlE6XqpngFFk9EXc=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:${APP_PORT}
 
-LOG_CHANNEL=stack
+# sail
+WWWUSER=1000
+WWWGROUP=1000
+APP_PORT=8088
+FORWARD_DB_PORT=33064
+FORWARD_REDIS_PORT=63794
+FORWARD_MAILPIT_PORT=1029
+FORWARD_MAILPIT_DASHBOARD_PORT=8029
+VITE_PORT=5175
+
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
