--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,12 @@ jobs:
 
     - name: Set up Docker Compose
       run: sudo apt-get update && sudo apt-get install docker-compose -y
+    - name: Install dependencies
+      run: composer install --no-interaction --prefer-dist
 
     - name: Build and start Sail
       run: |
         cp .env.example .env
-        composer install --no-interaction --prefer-dist
         ./vendor/bin/sail up -d
       env:
         MYSQL_PASSWORD: password
