--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '8.2' ]
     services:
       mysql:
         image: mysql:5.7
@@ -34,8 +37,8 @@ jobs:
     - name: Build and start Sail
       run: |
         cp .env.example .env
+        composer install --no-interaction
         ./vendor/bin/sail up -d
-        ./vendor/bin/sail composer install --no-interaction
       env:
         MYSQL_PASSWORD: password
 
