ci: Update ci-cd again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,6 @@ jobs:
           MYSQL_PASSWORD: password
 
       - name: Run Tests
-        run: ./vendor/bin/sail test
+        run: |
+          ./vendor/bin/sail test
+        working-directory: /var/www/html
